fixed the spacing have the display and the numbers on the page need the operators

--- a/Day-II-Calculator/calculator/src/App.css
+++ b/Day-II-Calculator/calculator/src/App.css
@@ -3,4 +3,5 @@
     width: 456px; 
     border: 2px solid #979797;
     margin: 0 auto;
+    z-index: 1; 
 }
